
classDiagram
direction TB

class Platform {
        <<enumeration>>
        ChatGPT
Claude
AIStudio
      }
class Format {
        <<enumeration>>
        Markdown
Json
      }
class FilenameEncoding {
        <<enumeration>>
        Standard
Preserve
      }
class Conversation {
            <<interface>>
            +id: string
+title: string
+date: Date
+messages: Message[]
            
        }
class Message {
            <<interface>>
            +role: MessageRole
+content: string
+timestamp?: Date
            
        }
class MessageRole {
        <<enumeration>>
        User
Assistant
System
Tool
      }
Conversation  -- "0..*" Message
Message  --  MessageRole
class BaseError{
            +context: Record~string, unknown~ | undefined
            
        }
class ValidationError{
            +validationErrors?: unknown
            
        }
class FileError{
            +filePath: string
+operation: FileOperation
            
        }
class FileOperation {
        <<enumeration>>
        Read
      }
BaseError<|--ValidationError
BaseError<|--FileError
class IConversationFilter {
            <<interface>>
            
            +filterConversations() FilterResult
        }
class JsonDirEntry {
            <<interface>>
            +filename: string
+mtime: Date
+content: unknown
            
        }
class IFileLoader {
            <<interface>>
            
            +readJsonFile() Promise~unknown~
+readJsonDir() Promise~JsonDirEntry[]~
        }
class IFileWriter {
            <<interface>>
            
            +writeConversations() Promise~WriteResult~
        }
class ILogger {
            <<interface>>
            
            +fatal() void
+error() void
+warn() void
+log() void
+info() void
+success() void
+fail() void
+box() void
+start() void
+ready() void
+debug() void
+trace() void
+verbose() void
        }
class IOutputFormatter {
            <<interface>>
            +format: Format
            +formatSingle() string
+formatMultiple() string
+getDefaultFilename() string
        }
IOutputFormatter  --  Format
class IPlatformParser~T~ {
            <<interface>>
            +schema: ZodType~T, unknown, $ZodTypeInternals~T, unknown~~
+inputKind: "file" | "directory"
            +parseAndValidateConversations() Promise~ParseResult~
+parseConversations() ParsedConversation~unknown~[]
        }
class ParsedConversation~T~ {
            <<interface>>
            +data: T
+schema: ZodType~T, unknown, $ZodTypeInternals~T, unknown~~
+transform: (validatedData: T) =~ Conversation
            
        }
class IResultReporter {
            <<interface>>
            
            +reportWriteResult() void
+reportParseResult() void
+reportFilterResult() void
+reportFinalSummary() void
        }
class ISchemaValidator {
            <<interface>>
            
            +validateWithDetails() ValidationResult~T~
+formatValidationReport() string
        }
class ValidationResult~T~ {
            <<interface>>
            +success: boolean
+data?: T
+errors?: ValidationErrorDetail[]
+warnings?: ValidationWarning[]
            
        }
class ValidationErrorDetail {
            <<interface>>
            +path: string
+message: string
+expected?: string
+received?: string
            
        }
class ValidationWarning {
            <<interface>>
            +message: string
+unknownFields?: string[]
            
        }
ValidationResult~T~  -- "0..*" ValidationErrorDetail
ValidationResult~T~  -- "0..*" ValidationWarning
class ISpinner {
            <<interface>>
            
            +start() void
+update() void
+succeed() void
+fail() void
+stop() void
        }
class BaseResult {
            <<interface>>
            +errors?: #123; message: string; details?: unknown; #125;[]
            
        }
class FilterResult {
            <<interface>>
            +conversations: Conversation[]
+originalCount: number
+filteredCount: number
+appliedFilters: #123; dateRange?: { since?: string; until?: string; removed: number; #125;; search?: { keyword: string; removed: number; }; }
            
        }
BaseResult<|..FilterResult
FilterResult  -- "0..*" Conversation
class ParseResult {
            <<interface>>
            +conversations: Conversation[]
+skippedFields: string[]
+validationErrors: string[]
+successCount: number
            
        }
BaseResult<|..ParseResult
ParseResult  -- "0..*" Conversation
class WrittenFile {
            <<interface>>
            +path: string
+conversationTitle: string
+date: Date
            
        }
class WriteResult {
            <<interface>>
            +successCount: number
+writtenFiles: WrittenFile[]
+outputFormat: Format
+splitMode: boolean
+outputDir: string
+dryRun: boolean
+errors: #123; file: string; error: string; #125;[]
            
        }
WriteResult  -- "0..*" WrittenFile
WriteResult  --  Format